[gd_scene load_steps=2 format=2]

[ext_resource path="res://incantation/Incantation_Operations.gd" type="Script" id=2]

[node name="Incantation_Operations" type="Container"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1330.0
margin_bottom = -997.0
rect_min_size = Vector2( 590, 65 )
mouse_filter = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 590.0
margin_bottom = 83.0
mouse_filter = 2
color = Color( 0.0784314, 0.0117647, 0.0117647, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 590.0
margin_bottom = 65.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 590.0
margin_bottom = 83.0
mouse_filter = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 590.0
margin_bottom = 65.0
rect_min_size = Vector2( 590, 65 )
mouse_filter = 2
custom_constants/vseparation = 12
custom_constants/hseparation = 12
columns = 8

[node name="potential" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 69.0
margin_right = 590.0
margin_bottom = 83.0
text = "Potentiel: 0"

[connection signal="gui_input" from="." to="." method="_on_Incantation_Operations_gui_input"]
[connection signal="operation_confirmed_and_incantation_updated" from="." to="." method="on_operation_confirmed"]
